test/2-errors/quo-nl.test
{
  'code' : 1,
  'err' : '''\
parse error: test/2-errors/quo-nl.ploy:1:2: unexpected character: '\\n'
    `
     ^
'''
}
